Merges chapters 4 and 5

--- a/embedded/embedded.tex
+++ b/embedded/embedded.tex
@@ -1,5 +1,6 @@
 \chapter{Embedded Development}
 
+\input{embedded/emulation/emulation}
 \input{embedded/initialdesign}
 \input{embedded/fpga}
 \input{embedded/mbed}
