--- a/embedded/emulation/cortex.tex
+++ b/embedded/emulation/cortex.tex
@@ -1,4 +1,4 @@
-\namedsection{ARM Cortex M0 Processor \label{sec:cortex}}{Pasat}
+\namedsubsection{ARM Cortex M0 Processor \label{sec:cortex}}{Pasat}
 
 This section discusses one of the main requirements and one of the essential aspects of the project: using ARM's Cortex M0 processor. This processor is a member of the Cortex-M family and offers a great tradeoff between costs and performance/functionality. It has been designed in order to allow intelligent compromises in terms of power usage, computational power and in the simplicity of the design. It implements a simplified version of the Advanced Microcontroller Bus Architecture (AMBA), the AMBA-Lite Bus, which allows connection to different peripherals. In this way, the Cortex-M0 generally acts as the master device and the peripherals act as slaves. In figure \ref{fig:cortexm0ds}, the schematic for the processor can be seen.\\
 \begin{figure}
@@ -26,7 +26,7 @@ The Debug system handles the program breakpoints, debugging control and the data
 
 The Wakeup Interrupt Controller (WIC) is important for this project because it is used in low-power applications. The microcontroller can be set to enter sleep mode by turning off most of its components. If a interrupt request is sent, this component can inform the unit that handles the power management to power up the system.
 
-\subsection{Limitations \label{sec:cortex-limitations}}
+\subsubsection{Limitations \label{sec:cortex-limitations}}
 
 Floating point is the formulaic representation for a real number for approximating it in order to obtain a balance between precision and range. Basically, it refers to the fact that a number's decimal point can "float", meaning  that is can be placed anywhere relative to significant digit from the number. One of the major challenges which were encountered in the use of the Cortex M0+ is the absence of floating point arithmetic on the device. This was mitigated by scaling each double value by $2^{12}$ and taking the integer part. After each multiplication, the value is bit-shifted by 12 to keep the scale factor consistent. This will be described late in more detail in section \ref{sec:floating-point}.
 
