--- a/embedded/emulation/fpga.tex
+++ b/embedded/emulation/fpga.tex
@@ -1,4 +1,4 @@
-\namedsection{FPGA}{Pasat}
+\namedsubsection{FPGA}{Pasat}
 
 A FPGA (field-programmable gate array) is an semiconductor device which is has a matrix of CLBs (configurable logic blocks) connected through programmable interconnects. One main advantage of FPGAs is that the can be preprogrammed after they are manufactured in order to fit desired functionalities and requirements, such as the ones required by our team's project. Amazing projects have also been realized with this processor on a FPGA, such as advanced real traffic light controller \cite{traffic_light}.
 
