--- a/report.tex
+++ b/report.tex
@@ -82,15 +82,9 @@
 
 	% Software chapter
 	\input{research/research}
-	
-	% Device Emulation
-	\input{emulation/emulation}
-	
-	% Embedded?
-	\input{embedded/embedded}
 
-	% Hardware chapter
-	%\input{hardware/hardware}
+	% Embedded
+	\input{embedded/embedded}
 
 	% Software chapter
 	\input{software/software}
