--- a/ECS.bib
+++ b/ECS.bib
@@ -308,3 +308,13 @@ ARM DesignStart Notes
     publisher={ARM},
 	title = {ARM® Cortex™-M0 DesignStart™}
 }
+
+Weka's original paper
+@inproceedings{holmes1994weka,
+	title={Weka: A machine learning workbench},
+	author={Holmes, Geoffrey and Donkin, Andrew and Witten, Ian H},
+	booktitle={Intelligent Information Systems, 1994. Proceedings of the 1994 Second Australian and New Zealand Conference on},
+	pages={357--361},
+	year={1994},
+	organization={IEEE}
+}
