--- a/research/machine-learning.tex
+++ b/research/machine-learning.tex
@@ -74,7 +74,7 @@ This data was run through a series of tools to build a model, as described in se
 %%% TOOLS USED / PRODUCED %%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Could perhaps do with more content
-Weka, a machine learning library, was used extensively for machine learning aspects. It provides a vast multitude of implemented machine learning algorithms, including various methods of evaluating the performance of these trained models.
+Weka, a machine learning library, was used extensively for machine learning aspects. It provides a vast multitude of implemented machine learning algorithms, including various methods of evaluating the performance of these trained models \cite{holmes1994weka}.
 
 %%%%%%%%%%%%%%%%%%%%%%% * Okay
 %%% THE ARFF SCRIPT %%%
