Dan's suggested changes to User Study Ch intro

--- a/study/study.tex
+++ b/study/study.tex
@@ -1,5 +1,5 @@
 \chapter{User Study}
-Clearly, in order to develop a device which can recognise the exercises, a lot of software development and research will need to be performed. However, the group felt an initial important step was to gather training data on which to base the development of an algorithm.
+In order to develop a device which can recognise the exercises, a lot of software development and research needed to be performed. However, the group felt an initial important step was to gather training data on which to base the development of an algorithm.
 
 The data which is involved are the readings from sensors which are attached to the body of a person when they are performing the exercises. As it is the intention for the system to be used by many different people who travel in planes, it was decided to gather the training data using a user study. This is because each individual has slight variations in the way they perform exercises so in order to improve the robustness of the system we collected movement data from 20 different people. This movement data could then be combined as the training data to form a model capable of correctly classifying exercises for most people.
 
