Fixes some minor things

--- a/research/components.tex
+++ b/research/components.tex
@@ -1,18 +1,18 @@
 \namedsection{Components}{Pasat}
-This section discusses the extensive analysis our team took in order to choose the most optimum and efficient components available on the market. The first step took before choosing suitable components for our design was the research on what sensors could be useful in detecting the type of movements described earlier in this project. The initial sensors our team agreed on were accelerometers, gyroscopes and altimeters, taking into consideration the possibility that it would detect if the user is aboard an aircraft or not.
+This section discusses the extensive analysis our team took in order to choose the most optimum and efficient components available on the market. The first step took before choosing suitable components for our design was the research on what sensors could be useful in detecting the type of movements described earlier in this project. The initial sensors our team agreed on were accelerometers and gyroscopes.
 \begin{table}[h]
 	\centering
 	\begin{tabular}{llllll}
 		\hline
 		$Name$ & $Voltagee$ & $Current(Acc+Gyro)$ & $Mounting$ & $Acc/Gyro$ \\
 		\hline
-		Breakout MPU-6050 & 2.3-3.4V & 3.6mA+500uA & Surface mount & Yes\\
+		Breakout MPU-6050 & 2.3-3.4V & 500$\mu$A+3.6mA & Surface mount & Both\\
 		\hline
-		 ADXL193 Board & 3.5-6V & N/A & Surface Mount & Acc \\
+		 ADXL193 Board & 3.5-6V & 1.5mA & Surface Mount & Acc \\
 		\hline
-		Xadow IMU 6DOF  & 3.3V &  3.6mA+500uA & Mount on & Yes \\
+		Xadow IMU 6DOF  & 3.3V &  500$\mu$A+3.6mA & Mount on & Both \\
 		\hline
-		Xadow 3-Axis Acc &  3.3V & 500uA & Surface Mount & Acc \\
+		Xadow 3-Axis Acc &  3.3V & 500$\mu$A & Surface Mount & Acc \\
 		\hline
 		 L3G4200D &  2.7-6.5V & 6.1mA & Mount on  & Gyro \\
 		\hline
