--- a/research/components.tex
+++ b/research/components.tex
@@ -1,5 +1,5 @@
 \namedsection{Components}{Pasat}
-This section discusses the extensive analysis our team took in order to choose the most optimum and efficient components available on the market. The first step took before choosing suitable components for our design was the research on what sensors could be useful in detecting the type of movements described earlier in this project. The initial sensors our team agreed on were accelerometers and gyroscopes.
+This section discusses the extensive analysis the team took in order to choose the most optimum and efficient components available on the market. The first step took before choosing suitable components for our design was the research on what sensors could be useful in detecting the type of movements described earlier in this project. The initial sensors our team agreed on were accelerometers and gyroscopes.
 \begin{table}[h]
 	\centering
 	\begin{tabular}{llllll}
@@ -21,7 +21,7 @@ This section discusses the extensive analysis our team took in order to choose t
 	\label{table: componentsx}
 \end{table}
 
-The main criteria on which we asserted the best component our design would need were: the working voltage, the current consumption, mounting type and if it was a multi-sensor component. In table \ref{table: componentsx}, our top five selected components for this project can be seen. Each have advantages and disadvantages over the others, but only one of them can be used. Even if some of the sensors have a lower supply voltage and both sensors present, the fact that they are surface mount complicates the project too much, so the mounting type became the main selecting criteria. Only two of the proposed components have this type of mounting, but one of them does not contain both sensors.
+The main criteria for component selection were: the working voltage, the current consumption, mounting type and if it was a multi-sensor component. In table \ref{table: componentsx}, the top five selected components for this project can be seen. Each have advantages and disadvantages over the others, but only one of them can be used. Even if some of the sensors have a lower supply voltage and both sensors present, the fact that they are surface mount complicates the project too much, so the mounting type became the main selecting criteria. Only two of the proposed components have this type of mounting, but one of them does not contain both sensors.
 
 \begin{figure}
 \centering
