--- a/research/machine-learning.tex
+++ b/research/machine-learning.tex
@@ -287,7 +287,7 @@ A noteworthy observation about the results was that after the first day of data 
 %%%%%%%%%%%%%%%%%%%%%%%%%%% *Okay
 %%% ALGORITHM SELECTION %%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
-The main contenders for the algorithm were the MLP and RBF network due to high performance while having relatively low complexity, allowing them to be implemented without too much difficulty. Between these two algorithms, there was only a slight performance decrease in favour of the RBF network under some conditions, however, given the complexity of the RBF network's requirement for computing RBFs, this could create issues, especially given hardware constraints regarding a floating point number implementation. On the other hand, the MLP is very simple and approximations can be made such that only integers are required. For this reason, the MLP was selected to be used. As seen previously, 20Hz appeared to be the optimal sampling frequency, so this was selected to be used. The number of hidden layers is a trade-off between resources and performance, and it was decided that 2 hidden layers would provide sufficient performance while allowing for a reasonable demonstration of constrained machine learning.
+The main contenders for the algorithm were the MLP and RBF networks due to high performance while having relatively low complexity, allowing them to be implemented without too much difficulty. Between these two algorithms, there was only a slight performance decrease in favour of the RBF network under some conditions, however, given the complexity of the RBF network's requirement for computing RBFs, this could create issues, especially given hardware constraints regarding a floating point number implementation. On the other hand, the MLP is very simple and approximations can be made such that only integers are required. For this reason, the MLP was selected to be used. As seen previously, 20Hz appeared to be the optimal sampling frequency, so this was selected to be used. The number of hidden layers is a trade-off between resources and performance, and it was decided that 2 hidden layers would provide sufficient performance while allowing for a reasonable demonstration of constrained machine learning.
 
 The model for this algorithm was trained on the data collected from the user study using the parameters aforementioned. The resultant confusion matrix (table \ref{tab:final-confusion}) shows good performance, with a $\kappa$ = 0.8003.
 
