Fix ref to research section in user study

--- a/research/machine-learning.tex
+++ b/research/machine-learning.tex
@@ -212,7 +212,7 @@ As a number of labelled instances must be kept in memory in order to compute the
 %%%%%%%%%%%
 An example of instance-based learning is the k-nearest neighbours algorithm, where any problem instance is compared to the k-nearest labelled instances. The majority class of these nearest instances would be used as the class for the problem instance.
 
-\subsubsection{Trade-offs and Parameters}
+\subsubsection{Trade-offs and Parameters \label{sec:trade-off-parameters}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% ALGORITHM PARAMETERS %%%
