--- a/study/study.tex
+++ b/study/study.tex
@@ -52,7 +52,7 @@ While testing the accuracy of the system is a vital part of the project, there w
 \namedsection{Classification of Results}{Finch}
 Once the first user study had been completed, the data collected from it needed to be manually classified. This is because a machine learning algorithm needs to be explicitly told what each piece of individual data means in order for it to use that as training data to create a model. In theory, when it is presented with new data it has not seen before, it will classify it based on how similar training data was manually classified.
 
-As discussed in section \ref{sec:tools}, three separate classification classes were decided upon. These were “not exercise” for any activity that is not part of an exercise and “peaks” and “troughs” for activities that were exercises. 
+As will be discussed in section \ref{sec:trade-off-parameters}, three separate classification classes were decided upon. These were “not exercise” for any activity that is not part of an exercise and “peaks” and “troughs” for activities that were exercises. 
 
 \begin{figure}
 	\centering
