--- a/embedded/mbed.tex
+++ b/embedded/mbed.tex
@@ -150,7 +150,7 @@ The model employed requires a set sampling rate, and to minimise the communicati
 	\label{eqn:i2c_clock}
 \end{equation}
 
-It was decided that the duty cycle of the I2C clock is 50\%, hence the value of SCLL and SCLH should be the same. A similar method, from when measuring the frequency of the oscillator with varying voltage via a pin, was used where the frequency of the pin is half the sampling rate. This because in one cycle of the pin, it goes through the while loop twice and the sensor is queried once each loop.
+It was decided that the duty cycle of the I2C clock is 50\%, hence the value of SCLL and SCLH should be the same. A similar method, from when measuring the frequency of the oscillator with varying voltage via a pin, was used where the frequency of the pin is half the sampling rate. This is because in one cycle of the pin, it goes through the while loop twice and the sensor is queried once each loop.
 
 \subsection{Issues}
 
