Add actual references to chapters in intro

--- a/embedded/embedded.tex
+++ b/embedded/embedded.tex
@@ -1,4 +1,4 @@
-\chapter{Embedded Development}
+\chapter{Embedded Development}\label{chap:embedded}
 
 \input{embedded/emulation/emulation}
 \input{embedded/initialdesign}
