--- a/research/research.tex
+++ b/research/research.tex
@@ -1,4 +1,4 @@
-\chapter{Research and Algorithm Design}
+\chapter{Research and Algorithm Design}\label{chap:research}
 
 \input{research/components}
 \input{research/exercise-detection}
